--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <meta property="og:title" content="Pingouini &amp; Girafette" />
 
-<meta property="og:url" content="https://girafette.github.io/" />
+<meta property="og:url" content="https://pingouini.github.io/girafette.github.io/" />
 
 
 
@@ -24,7 +24,7 @@
 
 
 
-<link rel="stylesheet" href="https://girafette.github.io/assets/css/split.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="https://pingouini.github.io/girafette.github.io/assets/css/split.css" type="text/css" media="screen" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 
@@ -32,7 +32,7 @@
 
   <style>
   
-    .fs-split .split-image { background-image: url("https://girafette.github.io/images/us.jpg"); background-position: center center; }
+    .fs-split .split-image { background-image: url("https://pingouini.github.io/girafette.github.io/images/us.jpg"); background-position: center center; }
   
   </style>
 
